# fastq_barcode_demux

./: Cargo.toml  README.md
src/: generate_fastq.rs  main.rs
src/common/: barcode_matcher.rs  concurrent_barcode_writer.rs  input_decompressor_traits.rs  mod.rs  output_compressor_traits.rs  read_barcode_file.rs
tests/: ci_test.rs  myers.rs  test_barcodes.txt
