[package]
name = "fastq_barcode_demux"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35" # latest Feb 3 2025
bio = "2.0.3" # latest Feb 25 2025
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
zstd = "0.13.2"
rand = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
tempfile = "3.17.1"
itertools = "0.14.0"

[profile.release]
opt-level = 3
debug = false
lto = true

[[bin]]
name = "generate_fastq"
path = "src/generate_fastq.rs"

[[bin]]
name = "demux_barcodes"
path = "src/main.rs"
